--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
@@ -43,6 +44,7 @@
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -181,9 +183,8 @@
 
         <meta-data
             android:name="RONG_CLOUD_APP_KEY"
-            android:value="e5t4ouvpttb0a" />
+            android:value="y745wfm8445rv" />
         <!-- end -->
-
 
         <activity
             android:name="cn.jinke.peasantcloud.activity.VideoContentActivity"
@@ -192,7 +193,7 @@
         </activity>
         <activity
             android:name="cn.jinke.peasantcloud.activity.LiveActivity"
-            android:label="@string/title_activity_live" 
+            android:label="@string/title_activity_live"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
@@ -201,6 +202,23 @@
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
+
+        <receiver
+            android:name="cn.jinke.peasantcloud.receiver.MessageReceiver"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="io.rong.push.intent.MESSAGE_ARRIVED" />
+                <action android:name="io.rong.push.intent.MI_MESSAGE_ARRIVED" />
+                <action android:name="io.rong.push.intent.MESSAGE_CLICKED" />
+                <action android:name="io.rong.push.intent.MI_MESSAGE_CLICKED" />
+            </intent-filter>
+        </receiver>
+
+        <activity
+            android:name="cn.jinke.peasantcloud.activity.PushDealActivity"
+             android:theme="@android:style/Theme.Holo.Light.NoActionBar"
+            android:label="@string/title_activity_push_deal" >
+        </activity>
     </application>
 
 </manifest>
