--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -36,11 +36,11 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:protectionLevel="signature"
-        android:theme="@style/title_bg" >
+        android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
             android:name="cn.jinke.peasantcloud.activity.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.PageIndicatorDefaults"
+            android:theme="@android:style/Theme.Light.NoTitleBar"
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
