--- a/project.properties
+++ b/project.properties
@@ -12,10 +12,10 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=../VitamioLibrary
-android.library.reference.2=../RongCloudLibrary/src/main
-android.library.reference.3=../SlidingMenuLibrary
-android.library.reference.4=../ViewPagerIndicatorLibrary
-android.library.reference.1=../VitamioLibrary
-android.library.reference.2=../RongCloudLibrary/src/main
-android.library.reference.3=../SlidingMenuLibrary
+android.library.reference.1=..\\SlidingMenuLibrary
+android.library.reference.2=..\\ViewPagerIndicatorLibrary
+android.library.reference.3=..\\RongIMKit
+android.library.reference.1=..\\SlidingMenuLibrary
+android.library.reference.2=..\\ViewPagerIndicatorLibrary
+android.library.reference.3=..\\RongIMKit
+android.library.reference.4=../InitActivity
