--- a/project.properties
+++ b/project.properties
@@ -12,17 +12,7 @@
 
 # Project target.
 target=android-19
-<<<<<<< HEAD
-android.library.reference.1=..\\SlidingMenuLibrary
-android.library.reference.2=..\\ViewPagerIndicatorLibrary
-android.library.reference.3=..\\RongIMKit
-android.library.reference.1=..\\SlidingMenuLibrary
-android.library.reference.2=..\\ViewPagerIndicatorLibrary
-android.library.reference.3=..\\RongIMKit
-android.library.reference.4=../InitActivity
-=======
-android.library.reference.1=..\\VitamioLibrary
-android.library.reference.2=..\\SlidingMenuLibrary
-android.library.reference.3=..\\ViewPagerIndicatorLibrary
-android.library.reference.4=../RongCloudLibrary/src/main
->>>>>>> a9529ffb0c7e5c1151af62dfa4df1ede1365ee08
+android.library.reference.1=../VitamioLibrary
+android.library.reference.2=../RongCloudLibrary/src/main
+android.library.reference.3=../SlidingMenuLibrary
+android.library.reference.4=../ViewPagerIndicatorLibrary
