--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,15 +26,14 @@
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <!-- 百度地图 -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<uses-permission android:name="android.permission.INTERNET"/>
-	<uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
-	<uses-permission android:name="android.permission.WAKE_LOCK"/>
-	<uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-	<uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-	<uses-permission android:name="android.permission.GET_TASKS" />
-	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-	<uses-permission android:name="android.permission.WRITE_SETTINGS" />
+   
+    <!-- <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.GET_TASKS" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" /> -->
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -48,11 +47,7 @@
         android:protectionLevel="signature"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
-<<<<<<< HEAD
-            android:name=".activity.MainActivity"
-=======
             android:name="cn.jinke.peasantcloud.activity.SplashIndexActivity"
->>>>>>> a9529ffb0c7e5c1151af62dfa4df1ede1365ee08
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
@@ -182,9 +177,9 @@
         <meta-data
             android:name="RONG_CLOUD_APP_KEY"
             android:value="e5t4ouvpttb0a" />
-        <meta-data  
-        android:name="com.baidu.lbsapi.API_KEY"  
-        android:value="ePHsYUYBT8p0SvSUzRnyzwtqS7v8yIcC" />  
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="xdNwPGCFktbxEaOrTa0Qk4YXKjI35OXz" />
 
         <service
             android:name="io.rong.imlib.ipc.RongService"
@@ -208,11 +203,7 @@
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-<<<<<<< HEAD
-            android:name=".activity.LiveActivity"
-=======
             android:name="cn.jinke.peasantcloud.activity.LiveActivity"
->>>>>>> a9529ffb0c7e5c1151af62dfa4df1ede1365ee08
             android:label="@string/title_activity_live"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
@@ -222,7 +213,6 @@
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
-<<<<<<< HEAD
         <activity
             android:name=".activity.WorkPlanActivity"
             android:label="@string/title_activity_work_plan"
@@ -230,31 +220,29 @@
         </activity>
         <activity
             android:name="cn.jinke.peasantcloud.activity.MapRouteActivity"
-            android:label="@string/title_activity_map_route_activity" 
-            android:theme="@android:style/Theme.Light.NoTitleBar">
-=======
+            android:label="@string/title_activity_map_route_activity"
+            android:theme="@android:style/Theme.Light.NoTitleBar" />
+            <receiver
+                android:name="cn.jinke.peasantcloud.receiver.MessageReceiver"
+                android:exported="true" >
+                <intent-filter>
+                    <action android:name="io.rong.push.intent.MESSAGE_ARRIVED" />
+                    <action android:name="io.rong.push.intent.MI_MESSAGE_ARRIVED" />
+                    <action android:name="io.rong.push.intent.MESSAGE_CLICKED" />
+                    <action android:name="io.rong.push.intent.MI_MESSAGE_CLICKED" />
+                </intent-filter>
+            </receiver>
 
-        <receiver
-            android:name="cn.jinke.peasantcloud.receiver.MessageReceiver"
-            android:exported="true" >
-            <intent-filter>
-                <action android:name="io.rong.push.intent.MESSAGE_ARRIVED" />
-                <action android:name="io.rong.push.intent.MI_MESSAGE_ARRIVED" />
-                <action android:name="io.rong.push.intent.MESSAGE_CLICKED" />
-                <action android:name="io.rong.push.intent.MI_MESSAGE_CLICKED" />
-            </intent-filter>
-        </receiver>
-
-        <activity
-            android:name="cn.jinke.peasantcloud.activity.PushDealActivity"
-            android:label="@string/title_activity_push_deal"
-            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
-        </activity>
-        <activity
-            android:name="cn.jinke.peasantcloud.activity.MainActivity"
-            android:theme="@style/Theme.PageIndicatorDefaults">
->>>>>>> a9529ffb0c7e5c1151af62dfa4df1ede1365ee08
-        </activity>
+            <activity
+                android:name="cn.jinke.peasantcloud.activity.PushDealActivity"
+                android:label="@string/title_activity_push_deal"
+                android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+            </activity>
+            <activity
+                android:name="cn.jinke.peasantcloud.activity.MainActivity"
+                android:theme="@style/Theme.PageIndicatorDefaults" >
+            </activity>
+        
     </application>
 
 </manifest>
