--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -38,8 +38,9 @@
         android:protectionLevel="signature"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
-            android:name="cn.jinke.peasantcloud.activity.SplashIndexActivity"
+            android:name="cn.jinke.peasantcloud.activity.MainActivity"
             android:label="@string/app_name"
+            android:theme="@style/Theme.PageIndicatorDefaults"
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -182,7 +183,7 @@
 
         <meta-data
             android:name="RONG_CLOUD_APP_KEY"
-            android:value="y745wfm8445rv" />
+            android:value="e5t4ouvpttb0a" />
         <!-- end -->
 
         <activity
@@ -219,7 +220,7 @@
             android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
         </activity>
         <activity
-            android:name="cn.jinke.peasantcloud.activity.MainActivity"
+            android:name="cn.jinke.peasantcloud.activity.SplashIndexActivity"
             android:theme="@style/Theme.PageIndicatorDefaults">
         </activity>
     </application>
