--- a/project.properties
+++ b/project.properties
@@ -13,7 +13,7 @@
 # Project target.
 target=android-19
 
-android.library.reference.1=../VitamioLibrary
-android.library.reference.2=../Rong_Cloud_Android_IMKit_SDK_v2_6_7_stable/src/main
-android.library.reference.3=../SlidingMenuLibrary
-android.library.reference.4=../ViewPagerIndicatorLibrary
+android.library.reference.1=..\\VitamioLibrary
+android.library.reference.2=..\\Rong_Cloud_Android_IMKit_SDK_v2_6_7_stable\\src\\main
+android.library.reference.3=..\\SlidingMenuLibrary
+android.library.reference.4=..\\ViewPagerIndicatorLibrary
