--- a/.classpath
+++ b/.classpath
@@ -5,12 +5,12 @@
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry kind="lib" path="libs/android-support-v4.jar"/>
-	<classpathentry kind="lib" path="libs/baidumapapi_base_v4_0_0.jar"/>
-	<classpathentry kind="lib" path="libs/baidumapapi_cloud_v4_0_0.jar"/>
-	<classpathentry kind="lib" path="libs/baidumapapi_map_v4_0_0.jar"/>
-	<classpathentry kind="lib" path="libs/baidumapapi_radar_v4_0_0.jar"/>
-	<classpathentry kind="lib" path="libs/baidumapapi_search_v4_0_0.jar"/>
-	<classpathentry kind="lib" path="libs/baidumapapi_util_v4_0_0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/android-support-v4.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/baidumapapi_base_v4_0_0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/baidumapapi_cloud_v4_0_0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/baidumapapi_map_v4_0_0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/baidumapapi_radar_v4_0_0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/baidumapapi_search_v4_0_0.jar"/>
+	<classpathentry exported="true" kind="lib" path="libs/baidumapapi_util_v4_0_0.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
