--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -26,21 +26,24 @@
     <uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
     <uses-permission android:name="android.permission.SYSTEM_ALERT_WINDOW" />
     <!-- 百度地图 -->
-   
-    <!-- <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
+
+
+    <!--
+    <uses-permission android:name="com.android.launcher.permission.READ_SETTINGS" />
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" /> -->
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+    -->
 
     <uses-sdk
         android:minSdkVersion="16"
         android:targetSdkVersion="18" />
 
     <application
-        android:name=".MyApplication"
+        android:name="cn.jinke.peasantcloud.MyApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo"
         android:label="@string/app_name"
@@ -58,17 +61,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.AddFarmerFriendActivity"
+            android:name="cn.jinke.peasantcloud.activity.AddFarmerFriendActivity"
             android:label="@string/title_activity_add_farmer_friend"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name=".activity.FarmerFriendCircleActivity"
+            android:name="cn.jinke.peasantcloud.activity.FarmerFriendCircleActivity"
             android:label="@string/title_activity_farmer_friend_circle"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
         <activity
-            android:name=".activity.ConversationActivity"
+            android:name="cn.jinke.peasantcloud.activity.ConversationActivity"
             android:label="@string/title_activity_conversation"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
             <intent-filter>
@@ -83,17 +86,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activity.FriendInfoActivity"
+            android:name="cn.jinke.peasantcloud.activity.FriendInfoActivity"
             android:label="@string/title_activity_friend_info"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
         <activity
-            android:name=".activity.GroupInfoActivity"
+            android:name="cn.jinke.peasantcloud.activity.GroupInfoActivity"
             android:label="@string/title_activity_group_info"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
         <activity
-            android:name=".activity.HomeSearchActivity"
+            android:name="cn.jinke.peasantcloud.activity.HomeSearchActivity"
             android:label="@string/title_activity_home_search"
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="adjustUnspecified|stateHidden" >
@@ -111,14 +114,14 @@
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
         <activity
-            android:name=".activity.PictureSelectorActivity"
+            android:name="cn.jinke.peasantcloud.activity.PictureSelectorActivity"
             android:screenOrientation="portrait"
             android:theme="@android:style/Theme.Light.NoTitleBar" />
         <activity
-            android:name=".activity.PicturePreviewActivity"
+            android:name="cn.jinke.peasantcloud.activity.PicturePreviewActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".tools.RongWebviewActivity"
+            android:name="cn.jinke.peasantcloud.tools.RongWebviewActivity"
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="io.rong.imkit.intent.action.webview" />
@@ -127,11 +130,11 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".widget.provider.TakingPicturesActivity"
+            android:name="cn.jinke.peasantcloud.widget.provider.TakingPicturesActivity"
             android:configChanges="orientation|keyboardHidden"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".activity.PicturePagerActivity"
+            android:name="cn.jinke.peasantcloud.activity.PicturePagerActivity"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen" />
 
         <!-- 必选： SDK 核心功能 -->
@@ -199,7 +202,7 @@
         <!-- end -->
 
         <activity
-            android:name=".activity.VideoContentActivity"
+            android:name="cn.jinke.peasantcloud.activity.VideoContentActivity"
             android:label="@string/title_activity_video_content"
             android:theme="@android:style/Theme.NoTitleBar" >
         </activity>
@@ -215,38 +218,48 @@
             android:theme="@android:style/Theme.NoTitleBar"
             android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
-            android:name=".activity.WorkPlanActivity"
+            android:name="cn.jinke.peasantcloud.activity.WorkPlanActivity"
             android:label="@string/title_activity_work_plan"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
         </activity>
         <activity
-
             android:name="cn.jinke.peasantcloud.activity.SplashIndexActivity"
-            android:theme="@style/Theme.PageIndicatorDefaults">
+            android:theme="@style/Theme.PageIndicatorDefaults" >
         </activity>
-
             android:name="cn.jinke.peasantcloud.activity.MapRouteActivity"
             android:label="@string/title_activity_map_route_activity"
-            android:theme="@android:style/Theme.Light.NoTitleBar" />
-            <receiver
-                android:name="cn.jinke.peasantcloud.receiver.MessageReceiver"
-                android:exported="true" >
-                <intent-filter>
-                    <action android:name="io.rong.push.intent.MESSAGE_ARRIVED" />
-                    <action android:name="io.rong.push.intent.MI_MESSAGE_ARRIVED" />
-                    <action android:name="io.rong.push.intent.MESSAGE_CLICKED" />
-                    <action android:name="io.rong.push.intent.MI_MESSAGE_CLICKED" />
-                </intent-filter>
-            </receiver>
+            android:theme="@android:style/Theme.Light.NoTitleBar" />
+        <receiver
+            android:name="cn.jinke.peasantcloud.receiver.MessageReceiver"
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="io.rong.push.intent.MESSAGE_ARRIVED" />
+                <action android:name="io.rong.push.intent.MI_MESSAGE_ARRIVED" />
+                <action android:name="io.rong.push.intent.MESSAGE_CLICKED" />
+                <action android:name="io.rong.push.intent.MI_MESSAGE_CLICKED" />
+            </intent-filter>
+        </receiver>
 
-            <activity
-                android:name="cn.jinke.peasantcloud.activity.PushDealActivity"
-                android:label="@string/title_activity_push_deal"
-                android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
-            </activity>
-           
-        
-
+        <activity
+            android:name="cn.jinke.peasantcloud.activity.PushDealActivity"
+            android:label="@string/title_activity_push_deal"
+            android:theme="@android:style/Theme.Holo.Light.NoActionBar" >
+        </activity>
+        <activity
+            android:name="cn.jinke.peasantcloud.activity.ScannerActivity"
+            android:label="@string/title_activity_scanner" >
+        </activity>
+        <activity
+            android:name="cn.jinke.peasantcloud.ScannerActivity"
+            android:label="@string/title_activity_scanner" >
+        </activity>
+         <activity
+            android:configChanges="orientation|keyboardHidden"
+            android:name="com.uuzuche.lib_zxing.activity.CaptureActivity"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="stateAlwaysHidden"
+            android:theme="@android:style/Theme.Light.NoTitleBar"
+            ></activity>
     </application>
 
 </manifest>
