--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -47,15 +47,19 @@
         android:protectionLevel="signature"
         android:theme="@android:style/Theme.Light.NoTitleBar" >
         <activity
-            android:name="cn.jinke.peasantcloud.activity.MainActivity"
+            android:name="cn.jinke.peasantcloud.activity.SplashIndexActivity"
             android:label="@string/app_name"
-            android:theme="@style/Theme.PageIndicatorDefaults"
+            android:theme="@android:style/Theme.Light.NoTitleBar"
             android:windowSoftInputMode="adjustPan" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.MainActivity"          
+            android:theme="@style/Theme.PageIndicatorDefaults" >
         </activity>
         <activity
             android:name=".activity.AddFarmerFriendActivity"
@@ -218,11 +222,6 @@
             android:name=".activity.WorkPlanActivity"
             android:label="@string/title_activity_work_plan"
             android:theme="@android:style/Theme.Light.NoTitleBar" >
-        </activity>
-        <activity
-
-            android:name="cn.jinke.peasantcloud.activity.SplashIndexActivity"
-            android:theme="@style/Theme.PageIndicatorDefaults">
         </activity>
  		<activity
             android:name="cn.jinke.peasantcloud.activity.MapRouteActivity"
