--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,7 +45,7 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:protectionLevel="signature"
-        android:theme="@android:style/Theme.Light.NoTitleBar" >
+        android:theme="@android:style/Theme.NoTitleBar" >
         <activity
             android:name="cn.jinke.peasantcloud.activity.SplashIndexActivity"
             android:label="@string/app_name"
