--- a/project.properties
+++ b/project.properties
@@ -12,10 +12,7 @@
 
 # Project target.
 target=android-19
-
-
-
-android.library.reference.1=../VitamioLibrary
-android.library.reference.2=../Rong_Cloud_Android_IMKit_SDK_v2_6_7_stable/src/main
-android.library.reference.3=../SlidingMenuLibrary
-android.library.reference.4=../ViewPagerIndicatorLibrary
+android.library.reference.1=../../../PeasantCloud/VitamioLibrary
+android.library.reference.2=../../../PeasantCloud/RongCloudLibrary/src/main
+android.library.reference.3=../../../PeasantCloud/SlidingMenuLibrary
+android.library.reference.4=../../../PeasantCloud/ViewPagerIndicatorLibrary
